After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669043 - User with no developer account shouldn't be allowed to select developer mode
User with no developer account shouldn't be allowed to select developer mode
Status: RESOLVED FIXED
Product: glom
Classification: Other
Component: users
1.21.x
Other Linux
: Normal major
: ---
Assigned To: Murray Cumming
Murray Cumming
Depends on: 669233
Blocks:
 
 
Reported: 2012-01-30 15:59 UTC by alien
Modified: 2012-02-03 11:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description alien 2012-01-30 15:59:00 UTC
I have different users as operator, and it's possible for them to select developer mode. Shouldn't developer mode be only available to users that have this role, apart of being on a developer group?

Best regards
Comment 1 Murray Cumming 2012-01-30 21:22:31 UTC
Confirmed. That is not meant to be possible.

Here are some clues to what might be going wrong, seen when starting Glom on the command line, just after entering the operator's username and password:

Glom::FieldTypes::FieldTypes(const Glib::RefPtr<Gnome::Gda::Connection>&): no rows from CONNECTION_META_TYPES
epc_publisher_create_server: listening on (null)


Switching to developer mode then shows this:

epc_publisher_create_server: listening on (null)
DEBUG: User=someoperator _is_ in the developer group on the server.


Choosing a table from the Tables menu results in this:

epc_publisher_create_server: listening on (null)

** WARNING **: get_fields_for_table_from_database(): table_name=actividades_obra, data_model_fields->get_n_rows() == 0: The table probably does not exist in the specified database.

** WARNING **: Document::set_table_fields(): vecFields is empty: table_name=actividades_obra
Glom::Document::type_vec_fields Glom::Document::get_table_fields(const Glib::ustring&) const: table found, but m_fields is empty. table_name=actividades_obra

** WARNING **: get_fields_for_table_from_database(): table_name=actividades_obra, data_model_fields->get_n_rows() == 0: The table probably does not exist in the specified database.
Glom::Document::type_vec_fields Glom::Document::get_table_fields(const Glib::ustring&) const: table found, but m_fields is empty. table_name=actividades_obra
Glom::Document::type_vec_fields Glom::Document::get_table_fields(const Glib::ustring&) const: table found, but m_fields is empty. table_name=actividades_obra
virtual void Glom::Box_Data_List::create_layout(): primary key not found for table: actividades_obra
Glom::Document::type_vec_fields Glom::Document::get_table_fields(const Glib::ustring&) const: table found, but m_fields is empty. table_name=actividades_obra


I should be able to create a regression test for this problem when I have fixed it.
Comment 2 Murray Cumming 2012-02-01 09:44:12 UTC
This new test shows that something is failing (the test fails) when using an operator user:
http://git.gnome.org/browse/glom/commit/?id=9c67be8dd6d161d5f78e162fc08d74c246a96470

I will investigate that, and I will eventually test the funciton that discovers whether the user is a developer.
Comment 3 Murray Cumming 2012-02-02 08:46:33 UTC
The main bug here is fixed by this commit:
http://git.gnome.org/browse/glom/commit/?id=c49a220b271413bf13823d01a52551a932a13a68

But I am still investigating the other problems found while using an operator user.
Comment 4 alien 2012-02-02 10:05:18 UTC
Yes, there is another one that is showing  on table menu all tables that are not hidden instead of showing only the allowed.
Comment 5 Murray Cumming 2012-02-03 10:46:04 UTC
The main problem from comment #2 is fixed here:
http://git.gnome.org/browse/glom/commit/?id=694bc016c1ce53a1e1853ab950c7abe94d1214fd

And I have filed bug #669299 because there is still some work to do.
Comment 6 alien 2012-02-03 11:17:06 UTC
Ok, I will be here for testing. Now I'm trying to work on Windows build env to compile glom.